--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 - docker build -t my-gcc-app .
 - docker run --detach --publish 8080:8080 --name mygccapp my-gcc-app:latest
 - docker ps -a
+- g++ client.cpp -o client
 
 script:
-- bundle exec rake test
+- bundle exec client
