--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,9 @@ before_install:
 
 script:
 - ./client
+
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push dfollereau/cpp-clientserver;
+    fi
