--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ services:
   - docker
 
 before_install:
-- docker build -t cpp-clientserver .
+- docker build -t dfollereau/cpp-clientserver .
 - docker images -a
-- docker run --detach --publish 8080:8080 --name cppserver cpp-clientserver:latest
+- docker run --detach --publish 8080:8080 --name cppserver dfollereau/cpp-clientserver:latest
 - docker ps -a
 - g++ client.cpp -o client
 - ls -al
