--- a/circle.yml
+++ b/circle.yml
@@ -22,3 +22,9 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push dfollereau/cpp-clientserver
+      
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: clntsvr
