--- a/circle.yml
+++ b/circle.yml
@@ -18,15 +18,15 @@ test:
     - ls -al
     - ./client
 
-deployment:
-  hub:
-    branch: master
-    commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push dfollereau/cpp-clientserver
+#deployment:
+#  hub:
+#    branch: master
+#    commands:
+#      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+#      - docker push dfollereau/cpp-clientserver
       
-deployment:
-  staging:
-    branch: master
-    heroku:
-      appname: clntsvr
+#deployment:
+#  staging:
+#    branch: master
+#    heroku:
+#      appname: clntsvr
