--- a/circle.yml
+++ b/circle.yml
@@ -25,8 +25,8 @@ test:
 #      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
 #      - docker push dfollereau/cpp-clientserver
       
-#deployment:
-#  staging:
-#    branch: master
-#    heroku:
-#      appname: clntsvr
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: clntsvr
