--- a/circle.yml
+++ b/circle.yml
@@ -18,13 +18,14 @@ dependencies:
     - sudo /opt/google-cloud-sdk/bin/gcloud --quiet container clusters get-credentials $CLUSTER_NAME
   override:
     - docker info
-    - docker build -t us.gcr.io/${PROJECT_NAME}/cpp-clientserver .
-#    - docker images -a
+    - docker build -t us.gcr.io/${PROJECT_NAME}/dfollereau-cppserver:$CIRCLE_SHA1 .
+    - docker tag us.gcr.io/${PROJECT_NAME}/dfollereau-cppserver:$CIRCLE_SHA1 us.gcr.io/${PROJECT_NAME}/dfollereau-cppserver:latest
+    - docker images -a
 
-#test:
-#  override:
-#    - docker run --detach --publish 8080:8080 --name cppserver dfollereau/cpp-clientserver:latest; sleep 10
-#    - docker ps -a
+test:
+  override:
+    - docker run -d -p 8080:8080 -e "SECRET_KEY_BASE=abcd1234" us.gcr.io/${PROJECT_NAME}/dfollereau-cppserver:$CIRCLE_SHA1; sleep 10
+    - docker ps -a
 #    - g++ client.cpp -o client
 #    - ls -al
 #    - ./client
