--- a/circle.yml
+++ b/circle.yml
@@ -18,12 +18,12 @@ test:
     - ls -al
     - ./client
 
-#deployment:
-#  hub:
-#    branch: master
-#    commands:
-#      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-#      - docker push dfollereau/cpp-clientserver
+deployment:
+  hub:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push dfollereau/cpp-clientserver
       
 #deployment:
 #  staging:
